# RINGEST

./: .gitignore  00_compute_sandbox_qnms.py  00_download_gwosc_events.py  01_extract_ringdown_poles.py  01_generate_sandbox_geometries.py  01b_generate_kerr_sandbox.py  02R_build_ringdown_boundary_dataset.py  02_emergent_geometry_engine.py  02_poles_to_dataset.py  02b_literature_to_dataset.py  02c_prepare_community_ringdown_cohort.py  02d_parse_ringdown_netcdf.py  03_clean_physical_dataset.py  03_discover_bulk_equations.py  03_discover_qnm_equations.py  04_geometry_physics_contracts.py  04_kan_qnm_classifier.py  05_analyze_bulk_equations.py  05_kerr_consistency_audit.py  05_validate_qnm_kerr.py  06_build_bulk_eigenmodes_dataset.py  06_holographic_eigenmode_dataset.py  07_emergent_lambda_sl_dictionary.py  07b_discover_lambda_delta_relation.py  08_build_holographic_dictionary.py  09_real_data_and_dictionary_contracts.py  10_build_gwosc_enriched_event_table.py  AGENTS.md  CLAUDE.md  GEMINI.md  PIPELINE_ROUTES.md  README.md  baseline_vs_premium_comparison.py  bulk_scalar_solver.py  canary_params_v12.csv  canary_params_v13.csv  canary_params_v13_effective.csv  catalog_params.csv  crear_csv_cardiff.py  diario_de_mierda.md  (+18 more)
.julia_pysr_project/: Manifest.toml  Manifest.toml.julia112.bak  Project.toml
_archive/: 00_compute_sandbox_qnms.py  00_sandbox_to_poles_bridge.py  00_validate_io_contracts.py  00b_physics_sanity_checks.py  01b_generate_kerr_sandbox.py  04b_negative_control_contracts.py  04c_negative_controls.py  04d_negative_hawking.py  06_holographic_eigenmode_dataset.py  (+5 more)
(+970 files in other folders)
