[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ringest"
version = "0.0.0"
description = "Bootstrap mínimo para la pipeline exploratoria RINGEST."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.10",
    "numpy>=1.26",
    "pandas>=2.0",
    "pydantic>=2,<3",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "torch>=2.4",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.4",
]
pysr = [
    "pysr",
]

[tool.setuptools]
py-modules = ["stage_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    ".venv-pysr",
    "__pycache__",
    "data",
    "outputs",
    "repo",
    "runs",
]
